[iOS] Prevent the omnibox from being squashed.

The toolbar contains views positioned with autoresizing masks.
Those masks get squased if the superview's size is set to 0.

In order to prevent this, this CL adds a constraint on the minimal
toolbar width.

To have this constraint stay around, this required not removing
all of the toolbar's constraints when the toolbar changed superview.

In turn, not doing that meant that the constraint on the height of the
toolbar (unlike the leading/trailing/top constraints which were based
on views anchors) was not getting automatically removed when the
toolbar changed superview. This is why this CL moves the ownership
of the height constraint out of the BVC/NTP, and into the
ToolbarController.

Bug: 773640
Change-Id: I2e9b3a59bf80f53c22285aff1595f79df54daefe