ios/chrome/browser/ui/ntp/new_tab_page_header_view.mm
@@ -27,10 +27,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   NewTabPageToolbarController* _toolbarController;
   UIImageView* _searchBoxBorder;
   UIImageView* _shadow;
-
-  // Constraint specifying the height of the toolbar. Used to update the height
-  // of the toolbar if the safe area changes.
-  __weak NSLayoutConstraint* toolbarHeightConstraint_;
 }
 
 @end
@@ -60,12 +56,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 }
 
 - (void)addConstraintsToToolbar {
-  toolbarHeightConstraint_ = [[_toolbarController view].heightAnchor
-      constraintEqualToConstant:
-          [_toolbarController
-
-              preferredToolbarHeightWhenAlignedToTopOfScreen]];
-
+  _toolbarController.heightConstraint.constant =
+      [_toolbarController preferredToolbarHeightWhenAlignedToTopOfScreen];
+  _toolbarController.heightConstraint.active = YES;
   [NSLayoutConstraint activateConstraints:@[
     [[_toolbarController view].leadingAnchor
         constraintEqualToAnchor:self.leadingAnchor],
@@ -73,7 +66,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
         constraintEqualToAnchor:self.topAnchor],
     [[_toolbarController view].trailingAnchor
         constraintEqualToAnchor:self.trailingAnchor],
-    toolbarHeightConstraint_
   ]];
 }
 
@@ -203,8 +195,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 }
 
 - (void)safeAreaInsetsDidChange {
+  [super safeAreaInsetsDidChange];
   if (base::FeatureList::IsEnabled(kSafeAreaCompatibleToolbar)) {
-    toolbarHeightConstraint_.constant =
+    _toolbarController.heightConstraint.constant =
         [_toolbarController preferredToolbarHeightWhenAlignedToTopOfScreen];
   }
 }
